Fixed phantom sidebar layout issue and re-registering the Hybrid primary menu

--- a/themes/dbc/css/layout.css
+++ b/themes/dbc/css/layout.css
@@ -58,9 +58,10 @@
 	.page-template-home #content {
 		width: 65%;
 	}
-	.layout-1c #content {
-		width: 100%;
-	}
+    .layout-1c #content,
+    .home.page-template-default #content {
+        width: 100%;
+    }
 }
 /* Mobile
  * Anything smaller than 620px
